# bestclaudecode

./: .gitignore  .mcp.json  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.json
desktop/: electron.vite.config.ts  package-lock.json  package.json  tsconfig.node.json  tsconfig.web.json  tsconfig.web.tsbuildinfo  vite.web.config.ts  vitest.config.ts
docs/: 01-project-setup.md  02-claude-md.md  03-subagents.md  04-skills.md  05-mcp-servers.md  06-hooks.md  07-slash-commands.md  08-full-integration.md  09-code-reviewer-agent.md  10-sdlc-pipeline.md  11-best-of-breed-agent-features.md  12-parallel-agents-and-diff-fix.md  13-cross-file-imports-and-parallel-review-live.md  14-subagent-model-selection.md  15-background-agents-and-package-root.md  16-worktree-isolation-and-package-root-cli.md  17-context-injection-and-format-context.md  18-cached-context-and-deps-flag.md  19-symbol-filter-and-fingerprint.md  20-stemmer-and-symbol-level-filter.md  21-lru-eviction-and-placeholder-fix.md  22-stemmer-bare-root-fix.md  30-shadow-workspace.md  (+15 more)
git-changelog-cli/: README.md  pyproject.toml
git-changelog-cli/changelog_cli/: __init__.py  __main__.py  classify.py  cli.py  errors.py  git_access.py  output.py  render.py  sections.py
git-changelog-cli/tests/: helpers.py  test_classify.py  test_cli_integration.py  test_performance.py  test_render.py  test_sections.py
support-ticket-triage/: .gitignore  README.md  pyproject.toml
support-ticket-triage/tests/: helpers.py  test_ai_worker.py  test_architecture_boundary.py  test_audit.py  test_classifier.py  test_cli_integration.py  test_drafting.py  test_evaluation.py  test_ingestion.py  test_local_index.py  test_overrides.py  test_queue.py  test_retrieval.py  test_review.py  test_storage.py  test_ticket_service_integration.py
support-ticket-triage/ticket_triage/: __init__.py  __main__.py  ai_worker.py  audit.py  classifier.py  cli.py  drafting.py  evaluation.py  ingestion.py  knowledge_base.py  llm_client.py  local_index.py  models.py  overrides.py  queue.py  retrieval.py  review.py  send_gateway.py  storage.py  ticket_service.py
(+362 files in other folders)
